<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView35"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/baseline_arrow_back_24" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center_horizontal"
                android:text="@string/register_title"
                android:textColor="@color/DarkBrown"
                android:textSize="50dp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="377dp"
                android:layout_height="72dp"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:text="@string/register_description"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="43dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                app:srcCompat="@drawable/baseline_person_24" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_toEndOf="@id/imageView6"
                android:hint="@string/register_username_hint"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginStart="20dp" />

        </RelativeLayout>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="44dp"
                android:layout_marginStart="20dp"
                app:srcCompat="@drawable/baseline_perm_contact_calendar_24" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_toEndOf="@id/imageView"
                android:hint="@string/register_mobile_hint"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginStart="20dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="41dp"
                android:layout_height="39dp"
                android:layout_marginStart="20dp"
                app:srcCompat="@drawable/baseline_email_24" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_toEndOf="@id/imageView4"
                android:hint="@string/register_email_hint"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginStart="20dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="41dp"
                android:layout_height="39dp"
                android:layout_marginStart="20dp"
                app:srcCompat="@drawable/baseline_password_24" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_toEndOf="@id/imageView3"
                android:hint="@string/register_password_hint"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginStart="20dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="41dp"
                android:layout_height="39dp"
                android:layout_marginStart="20dp"
                app:srcCompat="@drawable/baseline_password_24"
                tools:ignore="DuplicateIds" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_toEndOf="@id/imageView3"
                android:hint="@string/register_confirm_password_hint"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                tools:ignore="DuplicateIds" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button4"
                android:layout_width="370dp"
                android:layout_height="56dp"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="sans-serif"
                android:text="@string/register_button_sign_up"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="90dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center_horizontal"
                android:text="@string/register_sign_in_prompt" />

        </RelativeLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
